[package]
name = "xcopen"
version = "0.5.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]
description = "A convenient way to open xcodeproj/xcworkspace from a command line"
edition = "2018"

[dependencies]
walkdir = "2"
itertools = "0.9"
rustyline = "6.1"
structopt = "0.3"

[dev-dependencies]
expectest = "0.12"

[profile.release]
panic = "abort"
lto = true
