[package]
name = "xcopen"
version = "0.7.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]
description = "A convenient way to open xcodeproj/xcworkspace from a command line"
edition = "2018"

[dependencies]
walkdir = "2"
itertools = "0.10"
rustyline = "9.0"
structopt = "0.3"
main_error = "0.1"

[dev-dependencies]
expectest = "0.12"

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true
