[package]
name = "xcopen"
version = "0.10.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]
description = "A convenient way to open xcodeproj/xcworkspace from a command line"
edition = "2021"

[dependencies]
walkdir = "2"
itertools = "0.10"
rustyline = "11.0"
clap = { version = "4.1", features = ["derive"] }
main_error = "0.1"

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true
